examples/errors/03_type_errors.sop
// Soplang Type Errors
// Demonstrates errors that occur due to type system violations

qor("Soplang Type Error Examples")
qor("==========================")
qor("Uncomment examples one at a time to see specific errors")
qor("")

// Example 1: Type mismatch with static typing
// This will cause an error because you can't assign a number to a string variable
// qoraal name = "Ahmed"
// name = 42

// Example 2: Type mismatch with static typing (number)
// This will cause an error because you can't assign a string to a number variable
// tiro age = 30
// age = "thirty"

// Example 3: Type mismatch with static typing (boolean)
// This will cause an error because you can't assign a number to a boolean variable
// bool isActive = run
// isActive = 1

// Example 4: Invalid operation for type (indexing non-list)
// This will cause an error because you can't use index access on a number
// door number = 42
// door digit = number[0]

// Example 5: Invalid property access
// This will cause an error because you can't access properties on primitive types
// door text = "Hello"
// door firstLetter = text.first

// Example 6: Invalid method call
// This will cause an error because the method doesn't exist for this type
// liis numbers = [1, 2, 3]
// numbers.nonExistentMethod()

// Example 7: Type conversion error
// This will cause an error because the string can't be converted to a number
// door stringValue = "not a number"
// tiro numValue = tiro(stringValue)

// Valid code to run when all examples are commented out
// door dynamicVar = "This can be reassigned to different types"
// dynamicVar = 42  // Valid for dynamic typing with 'door'
// qor("Only this line should print when all errors are commented out: " + dynamicVar)
